--- a/tourneytest.html
+++ b/tourneytest.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <h1>Enter the Tournament</h1>
-  <form onsubmit="submitEntry(event)">
+  <form onsubmit="submitEntry(event)" method="post">
     <label for="psn">PSN Handle:</label><br>
     <input type="text" id="psn" name="psnHandle" required><br>
     <label for="reddit">Reddit Handle:</label><br>
