--- a/tourneytest.html
+++ b/tourneytest.html
@@ -19,7 +19,7 @@
         ipAddress
       };
 
-      const response = await fetch('AKfycbxTe8cKETVoVmsuOThDWPSCD5nGp1M7YklYxorjNxkSR0Jzcy8_tM8uC9wRqDTtGuMb', { 
+      const response = await fetch('https://script.google.com/macros/s/AKfycbxTe8cKETVoVmsuOThDWPSCD5nGp1M7YklYxorjNxkSR0Jzcy8_tM8uC9wRqDTtGuMb', { 
         method: 'POST',
         body: new URLSearchParams(submissionData)
       });
