--- a/tourneytest.html
+++ b/tourneytest.html
@@ -19,7 +19,7 @@
         ipAddress
       };
 
-      const response = await fetch('https://cors-anywhere.herokuapp.com/https://script.google.com/macros/s/AKfycbxTe8cKETVoVmsuOThDWPSCD5nGp1M7YklYxorjNxkSR0Jzcy8_tM8uC9wRqDTtGuMb/exec', { 
+      const response = await fetch('https://script.google.com/macros/s/AKfycbzLJJo_9_wNgeUezViYhvJbui_QjRyy641BIF_TyEy2A_UTCAUoMWyqY0jchwbdnDJZ/exec', { 
         method: 'POST',
         body: new URLSearchParams(submissionData)
       });
