--- a/tourneytest.html
+++ b/tourneytest.html
@@ -1,50 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Tournament Entry</title>
-  <script>
-    async function submitEntry(event) {
-      event.preventDefault();
-
-      const psnHandle = document.getElementById('psn').value;
-      const redditHandle = document.getElementById('reddit').value;
-
-      const ipResponse = await fetch('https://api.ipify.org?format=json'); // IP API
-      const ipData = await ipResponse.json();
-      const ipAddress = ipData.ip;
-
-      const submissionData = {
-        psnHandle,
-        redditHandle,
-        ipAddress
-      };
-
-      const response = await fetch('https://script.google.com/macros/s/AKfycbzLJJo_9_wNgeUezViYhvJbui_QjRyy641BIF_TyEy2A_UTCAUoMWyqY0jchwbdnDJZ/exec', { 
-        method: 'POST',
-        body: new URLSearchParams(submissionData)
-      });
-
-      const result = await response.json();
-      if (result.status === 'success') {
-        document.getElementById('message').innerHTML = `
-          <p>You're entered!</p>
-          <p>${result.entriesRemaining}/50 Entries remaining</p>
-        `;
-      } else {
-        document.getElementById('message').innerHTML = `<p>Error: ${result.message}</p>`;
-      }
-    }
-  </script>
-</head>
-<body>
-  <h1>Enter the Tournament</h1>
-  <form onsubmit="submitEntry(event)" method="post">
-    <label for="psn">PSN Handle:</label><br>
-    <input type="text" id="psn" name="psnHandle" required><br>
-    <label for="reddit">Reddit Handle:</label><br>
-    <input type="text" id="reddit" name="redditHandle" required><br>
-    <input type="submit" value="Enter">
-  </form>
-  <div id="message"></div>
-</body>
-</html>
+<form 
+  method="POST" 
+  action="https://script.google.com/macros/s/AKfycbzLJJo_9_wNgeUezViYhvJbui_QjRyy641BIF_TyEy2A_UTCAUoMWyqY0jchwbdnDJZ/exec"
+>
+  <input name="Email" type="email" placeholder="Email" required>
+  <input name="Name" type="text" placeholder="Name" required>
+  <button type="submit">Send</button>
+</form>
