--- a/tourneytest.html
+++ b/tourneytest.html
@@ -1,8 +1,17 @@
-<form 
-  method="POST" 
-  action="https://script.google.com/macros/s/AKfycbzLJJo_9_wNgeUezViYhvJbui_QjRyy641BIF_TyEy2A_UTCAUoMWyqY0jchwbdnDJZ/exec"
->
-  <input name="Email" type="email" placeholder="Email" required>
-  <input name="Name" type="text" placeholder="Name" required>
-  <button type="submit">Send</button>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Tournament Entry</title>
+</head>
+<body>
+  <h1>Enter the Tournament</h1>
+  <form method="POST" action="https://script.google.com/macros/s/YOUR_GOOGLE_APP_SCRIPT_URL/exec">
+    <label for="psn">PSN Handle:</label><br>
+    <input type="text" id="psn" name="psnHandle" placeholder="PSN Handle" required><br>
+    <label for="reddit">Reddit Handle:</label><br>
+    <input type="text" id="reddit" name="redditHandle" placeholder="Reddit Handle" required><br>
+    <button type="submit">Submit</button>
+  </form>
+  <div id="message"></div>
+</body>
+</html>
