--- a/tourneytest.html
+++ b/tourneytest.html
@@ -2,16 +2,40 @@
 <html>
 <head>
   <title>Tournament Entry</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    .container {
+      max-width: 400px;
+    }
+    img {
+      width: 100%; /* Adjust the image size as needed */
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>Enter the Tournament</h1>
-  <form method="POST" action="https://script.google.com/macros/s/AKfycbzLJJo_9_wNgeUezViYhvJbui_QjRyy641BIF_TyEy2A_UTCAUoMWyqY0jchwbdnDJZ/exec">
-    <label for="psn">PSN Handle:</label><br>
-    <input type="text" id="psn" name="psnHandle" placeholder="PSN Handle" required><br>
-    <label for="reddit">Reddit Handle:</label><br>
-    <input type="text" id="reddit" name="redditHandle" placeholder="Reddit Handle" required><br>
-    <button type="submit">Submit</button>
-  </form>
-  <div id="message"></div>
+  <div class="container">
+    <!-- Insert image -->
+    <img src="https://i.sstatic.net/lAhfp.png" alt="Tournament Image">
+    
+    <!-- Your form -->
+    <h1>Enter the DRAGON BALL FANS CAN'T READ Tournament</h1>
+    <form method="POST" action="https://script.google.com/macros/s/YOUR_GOOGLE_APP_SCRIPT_URL/exec">
+      <label for="psn">PSN Handle:</label><br>
+      <input type="text" id="psn" name="psnHandle" placeholder="PSN Handle" required><br>
+      <label for="reddit">Reddit Handle:</label><br>
+      <input type="text" id="reddit" name="redditHandle" placeholder="Reddit Handle" required><br>
+      <button type="submit">Submit</button>
+    </form>
+    <div id="message"></div>
+  </div>
 </body>
 </html>
