--- a/tourneytest.html
+++ b/tourneytest.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <!-- Insert image -->
-    <img src="https://i.sstatic.net/lAhfp.png" alt="Tournament Image">
+    <img src="logo.png" alt="Tournament Image">
     
     <!-- Your form -->
     <h1>Enter the DRAGON BALL FANS CAN'T READ Tournament</h1>
